chainspec file setting and downloading default file
